--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -5,13 +5,10 @@
 }
 
 $f-sise-title:2rem;
-$font_1 : 'Poppins',
-'Segoe UI',
-sans-serif; //Heading Font
-$font_2 : 'Poppins',
-'Segoe UI',
-sans-serif; //Body Font 
+$font_1 : 'Trebuchet MS','Segoe UI',sans-serif; //Heading Font
+$font_2 : 'Poppins','Segoe UI',sans-serif; //Body Font 
 // $font_3 :'Open Sans', sans-serif;   //special fonts
+$font-link:'Arial','Segoe UI','Roboto',sans-serif;//Link font
 
 /*--------------- ---- Responsive --------------------------*/
 
